fix(alerts): icons are blurred in IE11

--- a/scss/_alert.scss
+++ b/scss/_alert.scss
@@ -54,7 +54,6 @@
     margin-right: $alert-logo-size;
     content: "";
     background-repeat: no-repeat;
-    background-size: contain;
   }
 }
 // end mod
